Bug 1424906 - Fix PeriodicWave disableNormalization false behaviour; r=padenot

This adds a scaling factor of 0.5 even when normalization is
disabled, which is required for correct results.

MozReview-Commit-ID: J0VbMcaacGc

--HG--
extra : rebase_source : 1a8e2dd21a6a48a02fbafda994e42b59c5761ea4